virt01/deprecated/profilarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: profilarr-svc
  labels:
    app: profilarr
spec:
  ports:
    - port: 6868
      protocol: TCP
      name: profilarr-svc-port
  selector:
    app: profilarr
