virt01/deprecated/profilarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: profilarr-ingress
  namespace: torrent
  annotations:
    cert-manager.io/cluster-issuer: nf-lab
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: traefik.k3s.nf.lab
spec:
  ingressClassName: traefik
  rules:
  - host: profilarr.k3s.nf.lab
    http:
      paths:
      - backend:
          service:
            name: profilarr-svc
            port:
              number: 6868
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - profilarr.k3s.nf.lab
    secretName: profilarr-cert-tls
